# dxedrine

./: .gitignore  LICENSE  Makefile  README.md  dxedrine.cabal  package.yaml  stack.yaml
.circleci/: config.yml
app/: Main.hs
patches/: DX7Class.syx  Mine.syx
src/: Dxedrine.hs  TwoHundo.hs
src/Dxedrine/: Blocks.hs  CliMain.hs  Hlists.hs  Model.hs  Parsing.hs  Paths.hs  UiMain.hs  Words.hs
static/css/: buttons.css
test/: Main.hs  Spec.hs
