name:                dxedrine
version:             0.1.0.0
synopsis:            A Yamaha DX200 patch editor.
description:         Please see README.md
homepage:            https://github.com/ejconlon/dxedrine#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Conlon
maintainer:          ejconlon@gmail.com
copyright:           2016 Eric Conlon
category:            Music
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dxedrine
  build-depends:       base >= 4.8 && < 5
                     , binary
                     , bytestring
  default-language:    Haskell2010

executable dxedrine-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dxedrine
  default-language:    Haskell2010

test-suite dxedrine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dxedrine
                     , binary
                     , bytestring
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ejconlon/dxedrine
